# Graphcalc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
headers/: Application.h  FrameBuffer.h  IndexBuffer.h  Parser.h  shader.h  vertexbuffer.h
libs/imgui/: imgui_impl_opengl3.cpp
libs/includes/: glad.h  shader.h
res/shaders/: Default.vert  First.frag  Second.frag  default.frag
src/: Application.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Main.cpp  Parser.cpp  glad.c  shader.cpp
